show the list of local indexes available for table and details for global and local indexes